--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
+  "name": "static-site",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
     "start": "node server.js"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
